--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-game",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Mikhail-Hursky.github.io/react-game",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
